# dndgpt

./: .env.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml
converter/: adobebatchconverter.py  adobeconvertersingle.py
dndgpt/: asgi.py  settings.py  urls.py  wsgi.py
extractorizer/: README.md  content_analyzer.py  pdf_splitter.py  pdf_structure_mcp_server.py  pdf_structure_meta_schema.py  test_ai_integration.py  toc_diagnostic.py  toc_extractor.py
srd/: srd_cc_v5.2.1_system_reference_document_521.docx
