[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dndgpt"
version = "0.2.0"
description = "D&D GPT - AI-powered Dungeons & Dragons assistant"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "ThinkTank, LLC"},
]
dependencies = [
    "openai>=1.0.0",
    "django>=4.2.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    "pdf2image>=1.16.0",
    "PyPDF2>=3.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0.0",
    "django-cors-headers>=4.0.0",
    "djangorestframework>=3.14.0",
    "pymupdf>=1.26.3",
    "python-docx>=1.2.0",
    "mcp>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "django-stubs>=4.2.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
